JAVA: working on sorting the vulnerability content items by severity, high to low. It is working per notification but does not currently work on the entire message that gets sent